--- a/src/pages/FavouritesPage/FavouritesPage.scss
+++ b/src/pages/FavouritesPage/FavouritesPage.scss
@@ -2,20 +2,49 @@
 
 .fav_text {
   @include headerText;
-  margin: 80px 152px 0 152px;
+  margin: 80px 0 0 16px;
+
+  @include onTablet {
+    margin: 80px 0 0 24px;
+  }
+
+  @include onDesctop {
+    margin: 80px 0 0 32px;
+  }
 
   &--items {
     @include title-text();
     font-weight: 600;
     color: #89939A;
-    margin: 8px 152px 0 152px;
+    margin: 8px 0 0 16px;
+
+    @include onTablet {
+      margin: 8px 0 0 24px;
+    }
+
+    @include onDesctop {
+      margin: 8px 0 0 32px;
+    }
   }
+}
+
+.fav__container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .breadcrumbs1 {
   display: flex;
   flex-direction: row;
-  margin: 24px 0 40px 150px;
+  margin: 24px 0 40px 16px;
+
+  @include onTablet {
+    margin: 24px 0 40px 24px;
+  }
+
+  @include onDesctop {
+    margin: 24px 0 40px 32px;
+  }
 
   &__home {
     display: block;
